# palmer-ai

./: .ai_code_patterns.md  .ai_collaboration_context.json  .env.example  .env.production.example  .gitignore  .gitmodules  .palmer-pids  =0.52.0  Dockerfile  LICENSE  PALMER_AI_COMPLETE_INTELLIGENCE.md  Procfile  QUICK_COLLABORATION_GUIDE.txt  README.md  README_IMPLEMENTATION.md  README_NOTICE.md  README_PUBLIC_SAFE.md  build_layered_intelligence_system.sh  build_working_palmer_ai.sh  check-status.sh  create_test_products.py  deploy-frontend.sh  deploy_production.sh  init_database.py  launch-beautiful.sh  launch-palmer.sh  manage-runner-windows.ps1  manage-runner.sh  palmer-dev-manager.sh  palmer_ai_demo.html  palmer_ai_frontend_setup_commands.sh  palmer_ai_redesigned_frontend.tsx  privacy-tools.sh  project_analysis.txt  pyproject.toml  quick-push.sh  railway.toml  rebuild_palmer_core.sh  requirements.txt  run-local-ci.sh  (+30 more)
.git.backup.20250614_230025/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
frontend/: consciousness_interface.html  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
private_core/: .ipconfig  README.md  __init__.py  consciousness_stream.py
private_modules/: README.md  quantum_reasoning.py
rfp-intelligence-platform/: .gitignore  package-lock.json  package.json  package.json.backup  (+1 more)
rfp-intelligence-platform-backup/: .env.example  .eslintrc.json  SECURITY.md  package-lock.json  package.json  test-apis.js
rfp-intelligence-platform-backup-20250621-094755/: tsconfig.tsbuildinfo
(+129 files in other folders)
